[gd_scene load_steps=5 format=2]

[ext_resource path="res://ASSETS/UI/Fonts/Zombie_Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://ASSETS/UI/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://SCRIPTS/MainMenuUI.gd" type="Script" id=3]
[ext_resource path="res://ASSETS/UI/OptionsMenuUI.tscn" type="PackedScene" id=4]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.85001
margin_bottom = -2.84998
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 80.0
margin_right = 944.0
margin_bottom = 520.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
margin_right = 864.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 1 )
text = "Zombie Tactics"
align = 1

[node name="centerRow" type="HBoxContainer" parent="Menu"]
margin_top = 76.0
margin_right = 864.0
margin_bottom = 436.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/centerRow"]
margin_right = 864.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="StartGame" parent="Menu/centerRow/Buttons" instance=ExtResource( 2 )]
margin_top = 105.0
margin_right = 149.0
margin_bottom = 152.0

[node name="Options" parent="Menu/centerRow/Buttons" instance=ExtResource( 2 )]
margin_top = 156.0
margin_right = 109.0
margin_bottom = 203.0
text = "Options"

[node name="Exit Game" parent="Menu/centerRow/Buttons" instance=ExtResource( 2 )]
margin_top = 207.0
margin_right = 141.0
margin_bottom = 254.0
text = "Exit Game"

[node name="Info" type="RichTextLabel" parent="Menu"]
margin_top = 440.0
margin_right = 864.0
margin_bottom = 440.0
size_flags_horizontal = 3
text = "Version 1.0.0
Nameless Studio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="Menu/centerRow/Buttons/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="Menu/centerRow/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/centerRow/Buttons/Exit Game" to="." method="_on_Exit_Game_pressed"]
